add activity extension to check storage permission. Externalize messages to resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Showfotos</string>
     <string name="plus">Add</string>
+    <string name="permission_deny_msg">Permission denied. Can not access gallery images.</string>
+    <string name="label_all">All</string>
+    <string name="label_select_image">Select Images</string>
+    <string name="label_no_select">Please select three or more!</string>
+
 </resources>
